--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,18 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 colorama==0.4.4
 Django==2.2.16
+django-filter==21.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==5.1.0
+iniconfig==1.1.1
+packaging==21.3
+pluggy==0.13.1
+py==1.11.0
+PyJWT==2.3.0
+pyparsing==3.0.7
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
-djangorestframework-simplejwt==5.1.0
+pytz==2021.3
+sqlparse==0.4.2
+toml==0.10.2
