--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 atomicwrites==1.4.0
+asgiref==3.2.10
 attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -7,6 +8,7 @@ Django==2.2.16
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
+gunicorn==20.1.0
 iniconfig==1.1.1
 packaging==21.3
 pluggy==0.13.1
@@ -17,6 +19,7 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 pytz==2021.3
+psycopg2-binary==2.8.6
 sqlparse==0.4.2
 toml==0.10.2
 python-dotenv~=0.19.2
